[project]
name = "my-agent-project"
version = "0.2.0"
description = "Comprehensive AI Agent Project with advanced reasoning and learning"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "pyyaml>=5.4",
    "pytest>=6.2.0",
]

[project.scripts]
my-agent = "my_agent_project.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
